--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "~4.13.1",
     "find-largest": "git@github.com:baniol/find-largest.git",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "websocket": "^1.0.23",
+    "ws": "^1.1.1"
   }
 }
