--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "~1.13.2",
-    "cli-table": "^0.3.1",
+    "columnify": "^1.5.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
