--- a/ansible/vars/vars.yml
+++ b/ansible/vars/vars.yml
@@ -2,4 +2,4 @@
 hostname: node_demo
 username: "ec2-user"
 project_dir: "/home/ec2-user/Projects"
-nodejsversion: "node-v6.5.0-linux-x64"
+nodejsversion: "6.2.1"
